# datathon-7mlet-grupo-64

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  start.ps1  stop.ps1
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
dashboard/: app.py
data/golden_set/: README.md  evaluation_cases.jsonl
data/kaggle/: README.md
data/processed/: README.md
data/synthetic_enrichment/: README.md  schema.json
docs/: Adaptive-Offers-Pitch-Grupo64.pptx  Adaptive-Offers-Pitch-Grupo64.pptx.bak-20260621-142749  Adaptive-Offers-Pitch-Grupo74.pptx  README.md  architecture-azure.md  data-dictionary.md  feature-store.md  lgpd-plan.md  mlops-lifecycle.md  model-card.md  pitch.md  roadmap-improvements.md  system-card.md
examples/: context_sample.json
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DecisionExplorer.tsx  MetricCard.tsx  OffersGrid.tsx  PolicyHeader.tsx  ValueBreakdown.tsx
frontend/components/ui/: Badge.tsx  Card.tsx  Select.tsx  Slider.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/public/: README.md
notebooks/: 01_eda.ipynb
reports/: README.md  algorithmic-strategy.md  data-generation.md  eda-quality-report.md  offline-evaluation.md  technical-report.md
scripts/: add_logo_to_pptx.py  build_golden_set.py  fix_pptx_slides.py  update_pptx_colors.py
src/adaptive_offers/: __init__.py  bootstrap.py  channels.py  cli.py  config.py  logging_utils.py  nba.py  responsible.py  segmentation.py  tracking.py
src/adaptive_offers/api/: __init__.py  main.py  schemas.py
src/adaptive_offers/assistant/: __init__.py  explain.py  llm.py  rag.py
src/adaptive_offers/assistant/policies/: exploration_governance.md  offer_catalog_policy.md  privacy_summary.md  suitability_policy.md
src/adaptive_offers/bandits/: __init__.py  base.py  baseline.py  linucb.py  neural.py  registry.py  thompson.py  thompson_linear.py  ucb.py
src/adaptive_offers/data/: __init__.py  loader.py  preprocessing.py  quality.py  schema.py  synthetic.py
src/adaptive_offers/evaluation/: __init__.py  fairness.py  golden_set.py  offline_eval.py
src/adaptive_offers/feature_store/: __init__.py  definitions.py  store.py
src/adaptive_offers/monitoring/: __init__.py  drift.py  report.py  reward_monitor.py
src/adaptive_offers/policy/: __init__.py  decision_service.py  reason_codes.py  versioning.py
src/adaptive_offers/simulation/: __init__.py  environment.py  metrics.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_bandits.py  test_channels.py  test_data.py  test_decision_service.py  test_feature_store.py  test_golden_set.py  test_monitoring.py  test_nba.py  test_neural.py  test_responsible.py  test_schemas.py  test_segmentation.py  test_synthetic.py
