[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-offers"
version = "0.8.0"
description = "Adaptive experimentation platform for financial offers using multi-armed bandits, with feature store, LLM/RAG assistant, MLOps lifecycle and Azure-target architecture. FIAP 7MLET Datathon — Grupo 74."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Grupo 74 — FIAP 7MLET" }]
keywords = ["multi-armed-bandit", "thompson-sampling", "ucb", "mlops", "feature-store", "rag", "fintech"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "click>=8.1",
    "mlflow>=2.10",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
# LLM assistant providers (optional — the platform falls back to an offline summarizer).
llm = ["anthropic>=0.39"]
# Business-intelligence dashboard.
bi = ["streamlit>=1.30", "plotly>=5.18"]
# Drift / fairness monitoring reports (EvidentlyAI). Optional — the platform
# ships a self-contained HTML report that works without it.
monitoring = ["evidently>=0.4"]
# Deep / neural contextual bandit (PyTorch). Optional 5th policy.
deep = ["torch>=2.0"]
# Developer tooling.
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests",
]

[project.scripts]
# Single entry point for the end-to-end pipeline and operational commands.
adaptive-offers = "adaptive_offers.cli:cli"

[project.urls]
Repository = "https://github.com/dionebraga/datathon-7mlet-grupo-74"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adaptive_offers = ["assistant/policies/*.md", "py.typed"]

# ----------------------------------------------------------------------------
# Tooling configuration (MLOps: Python best practices)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
# E501: line length handled by formatter.
# B008: FastAPI relies on function calls (Body/Query/Depends) in argument defaults.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]  # tests intentionally assert on broad validation errors

[tool.mypy]
python_version = "3.11"
packages = ["adaptive_offers"]
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast isolated unit tests",
    "integration: end-to-end / service tests",
]

[tool.coverage.run]
source = ["adaptive_offers"]
branch = true
